[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/scorePanel.gd" type="Script" id=1]
[ext_resource path="res://fonts/prstart.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[node name="scorePanel" type="HBoxContainer"]
margin_right = 180.0
margin_bottom = 11.0
alignment = 1
script = ExtResource( 1 )

[node name="rankPlayerLabel" type="Label" parent="."]
margin_left = 10.0
margin_right = 50.0
margin_bottom = 11.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 1 )
text = "1st"
align = 1
valign = 1

[node name="namePlayerLabel" type="Label" parent="."]
margin_left = 54.0
margin_right = 106.0
margin_bottom = 11.0
rect_min_size = Vector2( 52, 0 )
custom_fonts/font = SubResource( 1 )
text = "AAA"
align = 1
valign = 1

[node name="scorePlayerLabel" type="Label" parent="."]
margin_left = 110.0
margin_right = 170.0
margin_bottom = 11.0
rect_min_size = Vector2( 52, 0 )
custom_fonts/font = SubResource( 1 )
text = "999999"
align = 2
valign = 1
